Fixed Test error

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -540,6 +540,78 @@
       "DEBUG:root:Processing message: ['BEAT']\n",
       "DEBUG:root:Processing message: ['BEAT']\n",
       "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
       "DEBUG:root:Processing message: ['BEAT']\n"
      ]
     }
@@ -600,8 +672,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "228a1d08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:root:Nodo a la escucha en localhost 49580\n",
+      "INFO:root:Nodo a la escucha en localhost 49581\n",
+      "INFO:root:Conexión aceptada con ('localhost', 49581)\n",
+      "INFO:root:Broadcasting start learning...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "DEBUG:root:Processing message: ['START_LEARNING', '1']\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "tensor([[-0.0057, -0.0065,  0.0113,  ...,  0.0104,  0.0321,  0.0135],\n",
+      "        [ 0.0229, -0.0138,  0.0141,  ...,  0.0170,  0.0205,  0.0045],\n",
+      "        [-0.0128, -0.0190, -0.0264,  ..., -0.0206, -0.0170, -0.0047],\n",
+      "        ...,\n",
+      "        [ 0.0021, -0.0212,  0.0319,  ...,  0.0195, -0.0281, -0.0085],\n",
+      "        [ 0.0239,  0.0084,  0.0049,  ..., -0.0049,  0.0273, -0.0169],\n",
+      "        [ 0.0165,  0.0120, -0.0048,  ...,  0.0215,  0.0310, -0.0216]])\n",
+      "Params received\n",
+      "tensor([[-0.0162, -0.0139,  0.0090,  ...,  0.0062,  0.0304, -0.0054],\n",
+      "        [ 0.0202,  0.0013, -0.0011,  ..., -0.0178, -0.0216, -0.0060],\n",
+      "        [-0.0347,  0.0182, -0.0119,  ..., -0.0147,  0.0321,  0.0041],\n",
+      "        ...,\n",
+      "        [ 0.0096, -0.0024,  0.0063,  ...,  0.0025, -0.0018, -0.0172],\n",
+      "        [ 0.0217,  0.0103, -0.0312,  ..., -0.0148, -0.0134, -0.0257],\n",
+      "        [ 0.0209, -0.0256,  0.0061,  ...,  0.0018,  0.0295, -0.0129]])\n",
+      "INFO:root:Model added (1/1)\n",
+      "INFO:root:Agregating models.\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36m<cell line: 46>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     43\u001b[0m                 \u001b[38;5;28mprint\u001b[39m(b)\n\u001b[1;32m     44\u001b[0m                 \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39meq(a, b)\u001b[38;5;241m.\u001b[39mall()\n\u001b[0;32m---> 46\u001b[0m \u001b[43mtest_round_result_equal\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[0;32mIn [9]\u001b[0m, in \u001b[0;36mtest_round_result_equal\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n\u001b[1;32m     43\u001b[0m \u001b[38;5;28mprint\u001b[39m(b)\n\u001b[0;32m---> 44\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39meq(a, b)\u001b[38;5;241m.\u001b[39mall()\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:Agregating done.\n",
+      "Params received\n",
+      "INFO:root:Model added (1/1)\n",
+      "INFO:root:Agregating models.\n",
+      "DEBUG:root:Agregating done.\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n",
+      "DEBUG:root:Processing message: ['BEAT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from p2pfl.node import Node\n",
+    "from p2pfl.learning.model import MyNodeLearning\n",
+    "from p2pfl.agregator import FedAvg    \n",
+    "from collections import OrderedDict\n",
+    "import torch\n",
+    "import time\n",
+    "\n",
+    "def test_round_result_equal(): # Parametrizar esto\n",
+    "\n",
+    "    # Node Creation\n",
+    "    n=2\n",
+    "    nodes = []\n",
+    "    for i in range(n):\n",
+    "        node = Node(host=\"localhost\")\n",
+    "        node.start()\n",
+    "        nodes.append(node)\n",
+    "\n",
+    "    # Node Connection\n",
+    "    for i in range(len(nodes)-1):\n",
+    "        nodes[i+1].connect_to(nodes[i].host,nodes[i].port)\n",
+    "        time.sleep(0.1)\n",
+    "\n",
+    "    # Check if they are connected\n",
+    "    for node in nodes:\n",
+    "        assert len(node.neightboors) == n-1\n",
+    "\n",
+    "    # Start Learning\n",
+    "    nodes[0].set_start_learning()\n",
+    "    \n",
+    "    # Waiting\n",
+    "    time.sleep(0.1)\n",
+    "\n",
+    "    # Validamos Modelos obtenidos sean iguales\n",
+    "    model = None\n",
+    "    first = True\n",
+    "    for node in nodes:\n",
+    "        if first:\n",
+    "            model = node.learner.get_parameters()\n",
+    "            first = False\n",
+    "        else:\n",
+    "            for layer in model:\n",
+    "\n",
+    "                a = model[layer]\n",
+    "                b = node.learner.get_parameters()[layer]\n",
+    "                print(a)\n",
+    "                print(b)\n",
+    "                assert torch.eq(a, b).all()\n",
+    "                \n",
+    "test_round_result_equal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d23139",
    "metadata": {},
    "outputs": [],
    "source": []
