Arreglados bugs con ultimo segmento de params y problemas de sincronía en el envio de modelos

--- a/pruebas.ipynb
+++ b/pruebas.ipynb
@@ -551,37 +551,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "18cb6409",
+   "execution_count": null,
+   "id": "de3333e5",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18cb6409",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:root:Nodo a la escucha en localhost 56866\n",
-      "INFO:root:Nodo a la escucha en localhost 56867\n",
-      "INFO:root:Conexión aceptada con ('localhost', 56867)\n",
+      "INFO:root:Nodo a la escucha en localhost 58355\n",
+      "INFO:root:Nodo a la escucha en localhost 58356\n",
+      "INFO:root:Conexión aceptada con ('localhost', 58356)\n",
       "INFO:root:Broadcasting start learning...\n",
       "INFO:root:Training...\n",
-      "DEBUG:root:Processing message: ['START_LEARNING', '1']\n",
+      "INFO:root:Training...\n",
       "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Model added (1/1)\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 3 finished.\n",
       "INFO:root:Training...\n",
       "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (1/1)\n",
+      "INFO:root:Agregating models.\n",
+      "INFO:root:Round 1 of 3 finished.\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
       "INFO:root:Model added (1/1)\n",
       "INFO:root:Agregating models.\n",
-      "INFO:root:Agregating models.\n",
-      "INFO:root:Round 1 of 1 finished.\n",
-      "INFO:root:Round 1 of 1 finished.\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Finish!!.\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 56866\n",
-      "INFO:root:Bajando el nodo, dejando de escuchar en localhost 56867\n",
-      "DEBUG:root:Processing message: ['STOP']\n",
-      "DEBUG:root:Processing message: ['STOP']\n",
-      "DEBUG:root:Closed connection with ('localhost', 56866)\n",
-      "DEBUG:root:Closed connection with ('localhost', 56867)\n"
+      "INFO:root:Round 2 of 3 finished.\n",
+      "INFO:root:Training...\n",
+      "INFO:root:Broadcasting model to all clients...\n",
+      "INFO:root:Error executing callback: invalid load key, '\\xe8'.\n",
+      "ERROR:root:invalid load key, '\\xe8'.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/communication_protocol.py\", line 150, in __exec\n",
+      "    self.callback_dict[action](*args)\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node_connection.py\", line 111, in __on_params\n",
+      "    self.nodo_padre.add_model(self.param_bufffer)\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node.py\", line 176, in add_model\n",
+      "    self.agredator.add_model(self.learner.decode_parameters(m))\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/learning/model.py\", line 50, in decode_parameters\n",
+      "    params = pickle.loads(data)\n",
+      "_pickle.UnpicklingError: invalid load key, '\\xe8'.\n",
+      "INFO:root:Error executing callback: invalid load key, '\\xe8'.\n",
+      "ERROR:root:invalid load key, '\\xe8'.\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/communication_protocol.py\", line 150, in __exec\n",
+      "    self.callback_dict[action](*args)\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node_connection.py\", line 111, in __on_params\n",
+      "    self.nodo_padre.add_model(self.param_bufffer)\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/node.py\", line 176, in add_model\n",
+      "    self.agredator.add_model(self.learner.decode_parameters(m))\n",
+      "  File \"/Users/pedro/Documents/UDC/4/TFG/federated_learning_p2p/p2pfl/learning/model.py\", line 50, in decode_parameters\n",
+      "    params = pickle.loads(data)\n",
+      "_pickle.UnpicklingError: invalid load key, '\\xe8'.\n",
+      "DEBUG:root:Too mucho errors. ('localhost', 58356)\n",
+      "DEBUG:root:Last error: b'PARAMS@\\x02\\x18\\xbc\\x94t\\x94be.\\\\PARAMS\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOPub data rate exceeded.\n",
+      "The notebook server will temporarily stop sending output\n",
+      "to the client in order to avoid crashing it.\n",
+      "To change this limit, set the config variable\n",
+      "`--NotebookApp.iopub_data_rate_limit`.\n",
+      "\n",
+      "Current values:\n",
+      "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+      "NotebookApp.rate_limit_window=3.0 (secs)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:Closed connection with ('localhost', 58356)\n",
+      "DEBUG:root:Too mucho errors. ('localhost', 58355)\n",
+      "DEBUG:root:Last error: b''\n",
+      "DEBUG:root:Buffer: b''\n",
+      "DEBUG:root:Closed connection with ('localhost', 58355)\n"
      ]
     }
    ],
@@ -593,10 +659,10 @@
     "import torch\n",
     "import time\n",
     "\n",
-    "def test_round_result_equal(): # Parametrizar esto\n",
-    "    \n",
+    "def test_convergence(x):\n",
+    "    n,r = x\n",
+    "\n",
     "    # Node Creation\n",
-    "    n=2\n",
     "    nodes = []\n",
     "    for i in range(n):\n",
     "        node = Node(host=\"localhost\")\n",
@@ -613,10 +679,18 @@
     "        assert len(node.neightboors) == n-1\n",
     "\n",
     "    # Start Learning\n",
-    "    nodes[0].set_start_learning()\n",
+    "    nodes[0].set_start_learning(rounds=r)\n",
     "\n",
     "    # Wait 4 results\n",
-    "    time.sleep(1)\n",
+    "    while True:\n",
+    "        time.sleep(1)\n",
+    "        finish = True\n",
+    "        for f in [node.round is None for node in nodes]:\n",
+    "            finish = finish and f\n",
+    "            \n",
+    "        if finish:\n",
+    "            break\n",
+    "\n",
     "\n",
     "    # Validamos Modelos obtenidos sean iguales\n",
     "    model = None\n",
@@ -627,33 +701,65 @@
     "            first = False\n",
     "        else:\n",
     "            for layer in model:\n",
-    "\n",
-    "                a = model[layer]\n",
-    "                b = node.learner.get_parameters()[layer]\n",
+    "                a = torch.round(model[layer], decimals=2)\n",
+    "                b = torch.round(node.learner.get_parameters()[layer], decimals=2)\n",
     "                assert torch.eq(a, b).all()\n",
     "\n",
     "    # Cerrar\n",
     "    for node in nodes:\n",
     "        node.stop()\n",
+    "        time.sleep(.2) #Esperar por la asincronía\n",
     "        \n",
-    "test_round_result_equal()"
+    "        \n",
+    "test_convergence((2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cf8855e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = b'000000001'\n",
+    "pos = a.find(b'1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14863c31",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'all'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mlist\u001b[39m \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mlist\u001b[39m\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mall\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'all'"
+     ]
+    }
+   ],
+   "source": [
+    "list = []\n",
+    "list.append(False)\n",
+    "\n",
+    "list.all()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de3333e5",
+   "id": "58ec96d8",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d13392ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "00000000\n",
+    "000000001000"
+   ]
   }
  ],
  "metadata": {
